# CG

./: .gitignore  CMakeLists.txt  Notes.md  main.cpp
Code/C++/Assignment 1/: CMakeLists.txt  assignment.html
Code/C++/Assignment 1/framework/: CMakeLists.txt
Code/C++/Assignment 1/framework/cmake/: download_framework_packages.cmake
Code/C++/Assignment 1/framework/include/: disable_all_warnings.h  shader.h  trackball.h  window.h
Code/C++/Assignment 1/framework/src/: trackball.cpp
Code/C++/Assignment 1/src/: cpp_exercises.cpp  cpp_exercises.h  la_exercises.cpp  la_exercises.h  main.cpp
Code/C++/Assignment 2/: CMakeLists.txt  assignment.html
Code/C++/Assignment 2/framework/cmake/: download_optional_packages.cmake
Code/C++/Assignment 2/framework/src/: trackball.cpp  window.cpp
Code/C++/Assignment 2/robot_arm/: CMakeLists.txt
Code/C++/Assignment 2/robot_arm/src/: draw.cpp  draw.h  main.cpp  reference.cpp  reference.h  robot_arm.cpp  robot_arm.h
Code/C++/Assignment 2/solar_system/: CMakeLists.txt
Code/C++/Assignment 2/solar_system/data/: readme.txt
Code/C++/Assignment 2/solar_system/src/: draw.cpp  draw.h  main.cpp  reference.cpp  reference.h  solar_system.cpp  solar_system.h
Code/C++/Assignment 3/: CMakeLists.txt  assignment.html
Code/C++/Assignment 3/framework/include/: trackball.h  window.h
Code/C++/Assignment 3/src/: draw.cpp  draw.h  main.cpp  mesh.cpp  mesh.h  shading.cpp  shading.h  shading_data.h  user_interaction.cpp  user_interaction.h
Code/C++/Final Project Part 1/: CMakeLists.txt  assignment.html
Code/C++/Final Project Part 1/framework/cmake/: download_optional_packages.cmake
Code/C++/Final Project Part 1/framework/example/: CMakeLists.txt
Code/C++/Final Project Part 1/framework/glad/: CMakeLists.txt
Code/C++/Final Project Part 1/framework/include/: disable_all_warnings.h  shader.h  trackball.h  window.h
Code/C++/Final Project Part 1/framework/src/: trackball.cpp  window.cpp
Code/C++/Final Project Part 1/src/: draw.cpp  draw.h  main.cpp  mesh.cpp  mesh.h  ray_tracing.cpp  ray_tracing.h  scene.cpp  scene.h
Code/C++/Final Project Part 2/: CMakeLists.txt
Code/C++/Final Project Part 2/data/: cube.mtl
Code/C++/Final Project Part 2/framework/: CMakeLists.txt
Code/C++/Final Project Part 2/framework/cmake/: download_framework_packages.cmake  download_optional_packages.cmake
Code/C++/Final Project Part 2/framework/include/: window.h
Code/C++/Final Project Part 2/framework/src/: trackball.cpp  window.cpp
Code/C++/Final Project Part 2/src/: bounding_volume_hierarchy.cpp  bounding_volume_hierarchy.h  draw.cpp  draw.h  image.cpp  image.h  main.cpp  mesh.cpp  mesh.h  ray_tracing.cpp  ray_tracing.h  scene.cpp  scene.h  screen.cpp  screen.h  stb_image.cpp
Code/C++/OpenGL/: CMakeLists.txt
Code/C++/linear_algebra_exercise/: CMakeLists.txt  assignment.html
Code/C++/linear_algebra_exercise/data/: pointplane  triangle
Code/C++/linear_algebra_exercise/framework/cmake/: download_framework_packages.cmake
Code/C++/linear_algebra_exercise/src/: draw.cpp  draw.h  la.cpp  la.h  main.cpp
Code/CSE4515-exercise3/exercise3/: CMakeLists.txt  exercise3.html
Code/CSE4515-exercise3/exercise3/resources/: default_scene.toml
Code/CSE4515-exercise3/exercise3/shaders/: blinn_phong_frag.glsl  debug_frag.glsl  lambert_frag.glsl  light_frag.glsl  phong_frag.glsl  toon_diffuse_frag.glsl  toon_specular_frag.glsl  xtoon_frag.glsl
Code/CSE4515-exercise3/exercise3/src/: main.cpp
Code/assignment_1_1/: CMakeLists.txt  assignment_1_1.html
Code/assignment_1_1/framework/include/framework/: image.h
Code/assignment_1_1/resources/: checkout.toml  default_scene.toml  scene2.toml
Code/assignment_1_1/shaders/: blinn_phong_frag.glsl  depth_vertex.glsl  distance_frag.glsl  lambert_frag.glsl  light_frag.glsl  light_vertex.glsl  phong_frag.glsl  toon_diffuse_frag.glsl  toon_specular_frag.glsl  x_toon_frag.glsl
Code/assignment_1_1/src/: main.cpp
Code/assignment_1_2/: CMakeLists.txt  assignment_1_2.html
Code/assignment_1_2/framework/include/framework/: disable_all_warnings.h
Code/assignment_1_2/framework/src/: window.cpp
Code/assignment_1_2/shaders/simulation/: particle-draw.frag  particle-draw.vert  particle-set-initial-data.frag  particle-sim.frag  screen-quad.vert
Code/assignment_1_2/shaders/sphere-container/: draw-sphere.frag  draw-sphere.vert
Code/assignment_1_2/src/: CMakeLists.txt  main.cpp
Code/assignment_1_2/src/render/: mesh.cpp  mesh.h
Code/assignment_1_2/src/simulation/: particles.cpp  particles.h  sphere_container.cpp  sphere_container.h
Code/assignment_1_2/src/ui/: camera.cpp  camera.h  menu.cpp  menu.h
Code/assignment_1_2/src/utils/: config.h  constants.h  render_utils.hpp
Code/assignment_1_3/: CMakeLists.txt  assignment_1_3.html
Code/assignment_1_3/framework/src/: shader.cpp
Code/assignment_1_3/resources/diffusionCurveXMLs/: Readme.txt  arch.xml  behindthecurtain.xml  circles2.xml  line.xml  zephyr.xml
Code/assignment_1_3/shaders/: color_shader.glsl  rasterize_primitive.glsl  sample_shader.glsl  texture_shader.glsl  vertex.glsl
Code/assignment_1_3/src/: main.cpp  rapidxml.hpp  rapidxml_utils.hpp  shapes.cpp  shapes.h
Code/cpp_introduction/: CMakeLists.txt
Code/cpp_introduction/cmake/: CompilerWarnings.cmake
Code/cpp_introduction/framework/src/: image.cpp  mesh.cpp
Code/cpp_introduction/src/: Exercises.cpp  Exercises.h
Code/exercise1/: CMakeLists.txt  exercise1.html
Code/exercise1/framework/include/framework/: image.h
Code/exercise1/framework/src/: shader.cpp
Code/exercise1/src/: main.cpp
Code/exercise4/: CMakeLists.txt  exercise4.html
Code/exercise4/shaders/: shader_frag.glsl  shader_vert.glsl  shadow_frag.glsl  shadow_vert.glsl
Code/exercise4/src/: camera.cpp  camera.h  main.cpp
Code/tutorialGLSL/: CMakeLists.txt  tutorialGLSL.html
Code/tutorialGLSL/framework/include/framework/: shader.h
Code/tutorialGLSL/framework/src/: mesh.cpp  shader.cpp  window.cpp
Code/tutorialGLSL/shaders/: debug_frag.glsl  vertex.glsl
Code/tutorialGLSL/src/: main.cpp
(+5 files in other folders)
